# agentic-ai-lab

./: README.md
crewai-lab/: .gitignore  README.md  pyproject.toml
crewai-lab/src/calendar_assistant_flow/: main.py  models.py
crewai-lab/src/calendar_assistant_flow/crews/Assistant_crew/: assistant_crew.py
crewai-lab/src/calendar_assistant_flow/crews/Assistant_crew/config/: agents.yaml  tasks.yaml
crewai-lab/src/calendar_assistant_flow/crews/Manager_crew/: manager_crew.py
crewai-lab/src/calendar_assistant_flow/crews/Manager_crew/config/: agents.yaml  tasks.yaml
crewai-lab/src/calendar_assistant_flow/tools/: custom_tool.py
